Add: Function search movies

--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="img/favicon.webp" type="image/webp">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Buscador de películas</title>
+  <title>MoviesWeb</title>
 </head>
 
 <body>
   <header class="header">
-    <a href="#">
+    <a href="index.html">
       <h1>Movies <span>Web</span></h1>
     </a>
 
     <div class="search-container">
 
-      <input type="text" id="searchInput" class="search" placeholder="Buscar Pelicula">
-      <button id="searchButton">Buscar</button>
+      <input type="text" id="searchTxt" class="search" placeholder="Buscar Pelicula">
+      <button id="searchBtn">Buscar</button>
     </div>
   </header>
 
